--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "node": ">=4.2.1"
   },
   "scripts": {
+    "start": "app.js",
     "test": "grunt test"
   },
   "description": "An easy to access aggregate of quidditch videos from around the world",
