--- a/package.json
+++ b/package.json
@@ -46,6 +46,8 @@
     "test": "test"
   },
   "dependencies": {
+    "grunt": "0.4.5",
+    "grunt-cli": "0.1.13",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.14",
     "materialize-css": "^0.97.1",
