--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "test": "test"
   },
   "dependencies": {
+    "compression": "^1.6.0",
     "express": "^4.13.3",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
