--- a/package.json
+++ b/package.json
@@ -47,17 +47,30 @@
   },
   "dependencies": {
     "compression": "^1.6.0",
+    "connect-timeout": "^1.7.0",
+    "cookie-parser": "^1.4.0",
+    "cookie-session": "^1.2.0",
+    "csurf": "^1.8.3",
+    "errorhandler": "^1.4.2",
     "express": "^4.13.3",
+    "express-session": "^1.12.1",
     "grunt": "0.4.5",
     "grunt-cli": "0.1.13",
     "jasmine-core": "^2.3.4",
     "karma": "^0.13.14",
     "logger": "0.0.1",
     "materialize-css": "^0.97.1",
+    "method-override": "^2.3.5",
+    "morgan": "^1.6.1",
     "node-gyp": "^3.0.3",
     "npm": "^3.3.10",
     "phantomjs": "^1.9.18",
     "rebuild": "^0.1.2",
+    "response-time": "^2.3.1",
+    "serve-favicon": "^2.3.0",
+    "serve-index": "^1.7.2",
+    "serve-static": "^1.10.0",
+    "vhost": "^3.0.2",
     "youtube-node": "^1.3.0"
   },
   "repository": {
