--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "node": ">=4.2.1"
   },
   "scripts": {
+    "postinstall": "bower install",
     "start": "$(npm bin)/grunt serve:dist",
     "test": "grunt test"
   },
@@ -44,6 +45,7 @@
     "test": "test"
   },
   "dependencies": {
+    "bower": "^1.7.0",
     "compression": "^1.6.0",
     "connect-timeout": "^1.7.0",
     "cookie-parser": "^1.4.0",
