--- a/package.json
+++ b/package.json
@@ -1,10 +1,37 @@
-{
-  "name": "quidviews",
-  "private": true,
-  "devDependencies": {
+  {
+    "name": "quidviews",
+    "private": true,
+    "devDependencies": {
+  },
+  "engines": {
+    "node": ">=4.2.1"
+  },
+  "scripts": {
+    "postinstall": "bower install",
+    "start": "$(npm bin)/grunt serve:dist",
+    "test": "grunt test"
+  },
+  "description": "An easy to access aggregate of quidditch videos from around the world",
+  "version": "1.0.0",
+  "main": "Gruntfile.js",
+  "directories": {
+    "test": "test"
+  },
+  "dependencies": {
     "autoprefixer-core": "^5.2.1",
+    "bower": "^1.7.0",
+    "compression": "^1.6.0",
+    "connect-timeout": "^1.7.0",
+    "cookie-parser": "^1.4.0",
+    "cookie-session": "^1.2.0",
+    "csurf": "^1.8.3",
+    "errorhandler": "^1.4.2",
+    "express": "^4.13.3",
+    "express-session": "^1.12.1",
+    "grunt": "0.4.5",
     "grunt": "^0.4.5",
     "grunt-angular-templates": "^0.5.7",
+    "grunt-cli": "0.1.13",
     "grunt-concurrent": "^1.0.0",
     "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-concat": "^0.5.0",
@@ -24,40 +51,12 @@
     "grunt-postcss": "^0.5.5",
     "grunt-usemin": "^3.0.0",
     "grunt-wiredep": "^2.0.0",
+    "jasmine-core": "^2.3.4",
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
+    "karma": "^0.13.14",
     "karma-jasmine": "*",
     "karma-phantomjs-launcher": "*",
-    "time-grunt": "^1.0.0"
-  },
-  "engines": {
-    "node": ">=4.2.1"
-  },
-  "scripts": {
-    "postinstall": "bower install",
-    "start": "$(npm bin)/grunt serve:dist",
-    "test": "grunt test"
-  },
-  "description": "An easy to access aggregate of quidditch videos from around the world",
-  "version": "1.0.0",
-  "main": "Gruntfile.js",
-  "directories": {
-    "test": "test"
-  },
-  "dependencies": {
-    "bower": "^1.7.0",
-    "compression": "^1.6.0",
-    "connect-timeout": "^1.7.0",
-    "cookie-parser": "^1.4.0",
-    "cookie-session": "^1.2.0",
-    "csurf": "^1.8.3",
-    "errorhandler": "^1.4.2",
-    "express": "^4.13.3",
-    "express-session": "^1.12.1",
-    "grunt": "0.4.5",
-    "grunt-cli": "0.1.13",
-    "jasmine-core": "^2.3.4",
-    "karma": "^0.13.14",
     "logger": "0.0.1",
     "materialize-css": "^0.97.1",
     "method-override": "^2.3.5",
@@ -70,6 +69,7 @@
     "serve-favicon": "^2.3.0",
     "serve-index": "^1.7.2",
     "serve-static": "^1.10.0",
+    "time-grunt": "^1.0.0",
     "vhost": "^3.0.2",
     "youtube-node": "^1.3.0"
   },
